--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <a href="about.html" class="nav-text-box">ABOUT</a>
                         </li>
                         <li>
-                            <a href="contact.php">CONTACT</a>
+                            <a href="contact.html">CONTACT</a>
                         </li>
                     </ul>
                 </div>
