--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,6 @@
-<html><head>
+<html>
+  
+  <head>
     <title>Causeway Coast Mini Club</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -99,7 +101,9 @@
         color: black;
       }
     </style>
-  </head><body>
+  </head>
+  
+  <body>
     <!-- Navbar -->
     <nav class="navbar navbar-default">
       <div class="container">
@@ -168,7 +172,8 @@
         <center>
           <div class="row">
             <div class="col-md-12">
-              <form class="form-horizontal text-center" form name="htmlform" method="post" action="form_send.php">
+              <form class="form-horizontal text-center" form="" name="htmlform" method="post"
+              action="form_send.php">
                 <div class="form-group">
                   <div class="col-sm-12">
                     <input type="text" class="form-control" placeholder="Name" name="name">
@@ -176,7 +181,8 @@
                 </div>
                 <div class="form-group">
                   <div class="col-sm-12">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email" name="email">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email"
+                    name="email">
                   </div>
                 </div>
                 <div class="form-group">
@@ -190,6 +196,9 @@
                   </div>
                 </div>
               </form>
+              <button type="submit" class="btn btn-default btn-lg">Submit</button>
+              <br>
+              <br>
             </div>
           </div>
         </center>
@@ -202,6 +211,6 @@
       <a href="#" class="fa fa-flickr"></a>
       <h4>© Causeway Coast Mini Club</h4>
     </footer>
-  
+  </body>
 
-</body></html>
+</html>
