--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<html><head>
-        <title>Causeway Coast Mini Club</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo|Open+Sans+Condensed:300">
-        <link rel="stylesheet" href="css/styles.css">
-        <style>
-            .fa {
+<html>
+  
+  <head>
+    <title>CCMC | Homeb</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo|Open+Sans+Condensed:300">
+    <link rel="stylesheet" href="css/styles.css">
+    <style>
+      .fa {
                                                                         padding: 20px;
                                                                         font-size: 30px;
                                                                         width: 70px;
@@ -94,104 +96,106 @@
                                                       .nav-text-box {
                                                         padding-right: 20px;
                                                       }
-        </style>
-    </head><body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="index.html"><img src="images/logo.png" alt="Logo" height="100" width="100" class="logo"></a>
-                </div>
-                <div class="collapse navbar-collapse justify-content-end" id="myNavbar">
-                    <ul class="list-inline nav-text navbar-nav text-right navbar-right">
-                        <li class="">
-                            <a href="index.html" class="nav-text-box">HOME </a>
-                        </li>
-                        <li>
-                            <a href="ccmc_weekend.html" class="nav-text-box">CAUSEWAY COAST MINI WEEKEND</a>
-                        </li>
-                        <a href="#">
+    </style>
+  </head>
+  
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="index.html"><img src="images\logo.png" alt="Logo" height="100" width="100" class="logo"></a>
+        </div>
+        <div class="collapse navbar-collapse justify-content-end" id="myNavbar">
+          <ul class="list-inline nav-text navbar-nav text-right navbar-right">
+            <li class="">
+              <a href="index.html" class="nav-text-box">HOME </a>
+            </li>
+            <li>
+              <a href="ccmc_weekend.html" class="nav-text-box">CAUSEWAY COAST MINI WEEKEND</a>
+            </li>
+            <a href="#">
             </a>
-                        <li>
-                            <a href="#">
+            <li>
+              <a href="#">
               </a>
-                            <a href="calendar.html" class="nav-text-box">CALENDAR</a>
-                        </li>
-                        <li>
-                            <a href="about.html" class="nav-text-box">ABOUT</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">CONTACT</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- First Container -->
-        <img src="images\indexbanner.jpg" alt="Banner" width="100%">
-        <!-- Second Container -->
-        <div class="container-fluid bg-2 text-center">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <img src="images/logo.png" height="350">
-                                </div>
-                                <div class="col-md-6">
-                                    <h1>ABOUT US</h1>
-                                    <h2>
-                                        <br>The Causeway Coast Mini Club caters for the mini enthusiasts of the North
-                                        Coast of Northern Ireland and further afield. The club has monthly meetings,
-                                        organizes events, attends other mini and old vehicle events and is generally
-                                        concerned about all things mini/MINI</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+              <a href="calendar.html" class="nav-text-box">CALENDAR</a>
+            </li>
+            <li>
+              <a href="about.html" class="nav-text-box">ABOUT</a>
+            </li>
+            <li>
+              <a href="contact.html">CONTACT</a>
+            </li>
+          </ul>
         </div>
-        <div class="container-fluid bg-3 text-center">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h1>BECOME A MEMBER</h1>
-                                    <h2 class="text-center">
-                                        <br>New members are always welcome. Feel free to turn up at one of our meetings,
-                                        or to come and say "Hi" at any event that you see us at. You can download
-                                        a club application form using the button on the right.
-                                        <br>
-                                        <br>Meetings are held at the Brown Trout Golf &amp; Country Inn, Aghadowey
-                                        on the first Tuesday of every month at 8:15pm.</h2>
-                                </div>
-                                <div class="col-md-6">
-                                    <a href="images\CCMC_Application_Form.pdf" target="_blank"><img src="images/download_icon.png" height="350"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+      </div>
+    </nav>
+    <!-- First Container -->
+    <img src="images\indexbanner.jpg" alt="Banner" width="100%">
+    <!-- Second Container -->
+    <div class="container-fluid bg-2 text-center">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="images\logo.png" height="350">
                 </div>
+                <div class="col-md-6">
+                  <h1 class="text-center">ABOUT US</h1>
+                  <h2 class="text-center">
+                    <br>The Causeway Coast Mini Club caters for the mini enthusiasts of the North
+                    Coast of Northern Ireland and further afield. The club has monthly meetings,
+                    organizes events, attends other mini and old vehicle events and is generally
+                    concerned about all things mini/MINI</h2>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
-        <img src="images/2016 CCMC.JPG" alt="Banner" width="100%">
-        <!-- Footer -->
-        <footer class="container-fluid bg-4 text-center">
-            <a href="www.facebook.com/northernminis" class="fa fa-5x fa-facebook">
+      </div>
+    </div>
+    <div class="container-fluid bg-3 text-center">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <h1>BECOME A MEMBER</h1>
+                  <h2 class="text-center">
+                    <br>New members are always welcome. Feel free to turn up at one of our meetings,
+                    or to come and say "Hi" at any event that you see us at. You can download
+                    a club application form using the button on the right.
+                    <br>
+                    <br>Meetings are held at the Brown Trout Golf &amp; Country Inn, Aghadowey
+                    on the first Tuesday of every month at 8:15pm.</h2>
+                </div>
+                <div class="col-md-6 text-center">
+                  <a href="images\CCMC_Application_Form.pdf" target="_blank"><img src="images\download-icon.png" height="350"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <img src="images\2016 CCMC.JPG" alt="Banner" width="100%">
+    <!-- Footer -->
+    <footer class="container-fluid bg-4 text-center">
+      <a href="www.facebook.com/northernminis" class="fa fa-5x fa-facebook">
       </a>
-            <a href="#" class="fa fa-youtube"></a>
-            <a href="#" class="fa fa-flickr"></a>
-            <h4>© Causeway Coast Mini Club</h4>
-        </footer>
-    
+      <a href="#" class="fa fa-youtube"></a>
+      <a href="#" class="fa fa-flickr"></a>
+      <h4>© Causeway Coast Mini Club</h4>
+    </footer>
+  </body>
 
-</body></html>
+</html>
