--- a/contact.html
+++ b/contact.html
@@ -172,8 +172,7 @@
         <center>
           <div class="row">
             <div class="col-md-12">
-              <form class="form-horizontal text-center" form="" name="htmlform" method="post"
-              action="form_send.php">
+              <form class="form-horizontal text-center" form="" action="http://formspree.io/jamesadamchambers@btinternet.com" method="post">
                 <div class="form-group">
                   <div class="col-sm-12">
                     <input type="text" class="form-control" placeholder="Name" name="name">
