--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   
   <head>
-    <title>CCMC | Home</title>
+    <title>Causeway Coast Mini Club</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -81,7 +81,7 @@
                                                                                         border-radius: 0;
                                                                                         margin-bottom: 0;
                                                                                         font-size: 20px;
-                                                                                        letter-spacing: 5px;
+                                                                                        letter-spacing: 1px;
                                                                  
                                                                                     }
                                                                                     .navbar-nav  li a:hover {
@@ -104,15 +104,17 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a href="index.html"><img src="images\logo.png" alt="Logo" height="100" width="100" class="logo"></a>
+          <center>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">&lt;&gt;
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a href="index.html"><img src="images\logo.png" alt="Logo" height="100" width="100" class="logo"></a>
+          </center>
         </div>
         <div class="collapse navbar-collapse justify-content-end" id="myNavbar">
-          <ul class="list-inline nav-text navbar-nav text-right navbar-right">
+          <ul class="list-inline nav-text navbar-nav navbar-right text-right">
             <li class="">
               <a href="index.html" class="nav-text-box">HOME </a>
             </li>
@@ -146,9 +148,14 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-6">
-                  <img src="images\logo.png" height="350">
+                  <center>
+                    <img src="images\logo.png" height="350" class="hidden-xs">
+                  </center>
                 </div>
                 <div class="col-md-6">
+                  <center>
+                    <img src="images\logo.png" class="hidden-lg hidden-md hidden-sm" height="200">
+                  </center>
                   <h1 class="text-center">ABOUT US</h1>
                   <h2 class="text-center">
                     <br>The Causeway Coast Mini Club caters for the mini enthusiasts of the North
@@ -177,9 +184,13 @@
                     <br>
                     <br>Meetings are held at the Brown Trout Golf &amp; Country Inn, Aghadowey
                     on the first Tuesday of every month at 8:15pm.</h2>
+                  <br>
                 </div>
                 <div class="col-md-6 text-center">
-                  <a href="images\CCMC_Application_Form.pdf" target="_blank"><img src="images\download-icon.png" height="350"></a>
+                  <center>
+                    <a href="images\CCMC_Application_Form.pdf" target="_blank" class="hidden-lg hidden-md hidden-sm"><img src="images\download_icon.png" height="200"></a>
+                  </center>
+                  <a href="images\CCMC_Application_Form.pdf" target="_blank" class="hidden-xs"><img src="images\download_icon.png" height="350"></a>
                 </div>
               </div>
             </div>
